--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,174 @@ a{
   text-decoration: none;
 }
 .container{
-  max-width: 1588px;
+  max-width: 1598px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 15px;
+}
+.sectionTop{
+  padding: 100px 0 168px;
+}
+.sectionTop__inner{
+  display: flex;
+  gap: 120px;
+  position: relative;
+}
+.sectionTop__moneyBlock::before{
+  content:'';
+  width: 418px;
+  height: 382px;
+  background-image: url('./../public/images/sectionTop/Abstract Design.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: -186px;
+  z-index: -1;
+}
+.sectionTop__info{
+  max-width: 825px;
+}
+.info__subdiv{
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 10px 18px 10px 12px;
+  border-radius: 60px;
+  background-color: #262626;
+  max-width: 347px;
+  margin-bottom: 20px;
+}
+.subdiv__text{
+  font-weight: 200;
+  font-size: 18px;
+  line-height: 24px;
+}
+.info__title{
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 14px;
+}
+.info__title-span{
+  color:#CAFF33;
+}
+.info__desc{
+  font-weight: 200;
+  color:#E4E4E7;
+  margin-bottom: 50px;
+}
+.info__link{
+  display: inline-block;
+  padding: 18px 30px;
+  color:#1C1C1C;
+  background-color: #CAFF33;
+  border-radius: 82px;
+}
+.sectionTop__moneyBlock{
+  padding: 35px;
+  border:1px solid rgba(202,255,51,0.1);
+  border-radius: 10px;
+  position: relative;
+  background-color: #1A1A1A;
+  max-width: 515px;
+}
+.transactions__title{
+  font-weight: 500;
+  margin-bottom: 18px;
+}
+.exchange__title{
+  margin: 25px 0;
+  font-weight: 500;
+}
+.exchange__table{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  border-radius: 10px;
+  border:1px solid #262626;
+  margin-bottom: 25px;
+}
+.table__IndianBlock{
+  padding: 17px;
+  border-bottom:1px solid #262626;
+  border-right:1px solid #262626;
+}
+.IndianBlock__titleImg{
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  margin-bottom: 9px;
+}
+.table__USABlock{
+  padding: 17px;
+  border-bottom:1px solid #262626;
+  border-left:1px solid #262626;
+}
+.USABlock__titleImg{
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  margin-bottom: 9px;
+}
+.table__priceBlock{
+  padding: 26px 17px;
+}
+.priceBlock__border{
+  border-right: 1px solid #262626;
+}
+.moneyBlock__link{
+  display: inline-block;
+  padding: 14px 10px;
+  background-color: #22251B;
+  border-radius: 71px;
+  color:#D1FF4D;
+  width: 100%;
+  text-align: center;
+}
+.IndianBlock__text{
+  font-size: 14px;
+  font-weight: 200;
+  color:#E4E4E7;
+}
+.USABlock__text{
+  font-size: 14px;
+  font-weight: 200;
+  color:#E4E4E7;
+}
+.sectionTop__currency{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 9px 9px 9px 20px;
+  position: absolute;
+  bottom: -90px;
+  right: 50px;
+  border-radius: 70px;
+  background-color: #22251B;
+}
+.currency__text{
+  font-size: 15px;
+}
+.currency__images{
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  border-radius: 47px;
+  background-color: #1A1A1A;
+  padding: 9px;
+}
+.sectionTop__income{
+  display: flex;
+  gap: 9px;
+  align-items: center;
+  padding: 13px 17px;
+  border-radius: 10px;
+  background-color: #22251B;
+  position: absolute;
+  left: -60px;
+  top: -40px;
+}
+.income__info-text{
+  font-size: 14px;
+  font-weight: 200;
+  color:#E4E4E7;
 }
