--- a/src/index.css
+++ b/src/index.css
@@ -265,3 +265,112 @@ a{
 .blocks__item3{
   padding-left: 50px;
 }
+.sectionCases{
+  padding-bottom: 150px;
+}
+.sectionCases__title{
+  color:#CAFF33;
+  font-weight: 500;
+  font-size: 48px;
+  margin-bottom: 14px;
+}
+.sectionCases__desc{
+  color:#B3B3B3;
+  font-weight: 200;
+  font-size: 18px;
+  margin-bottom: 80px;
+}
+.sectionCases__IndividualsBlock{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 100px;
+}
+.IndividualsBlock__images{
+  padding: 50px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 20px;
+  background-color: #1C1C1C;
+  border-radius: 20px;
+  position: relative;
+  z-index: 5;
+}
+.individuals__after::after{
+  content:'';
+  width: 224px;
+  height: 213px;
+  background-image: url('./../public/images/sectionCases/Abstract Design.png');
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+.business__after::after{
+  content:'';
+  width: 224px;
+  height: 213px;
+  background-image: url('./../public/images/sectionCases/Abstract Design (1).png');
+  position: absolute;
+  right: -10px;
+  top: 0;
+  z-index: -1;
+}
+.IndividualsBlock__images-item{
+  padding: 30px;
+  background-color: #1A1A1A;
+  border-radius: 16px;
+  border:1px solid #262626;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 24px;
+}
+.IndividualsBlock__info{
+  padding: 30px 0;
+}
+.IndividualsBlock__info-title{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 14px;
+}
+.IndividualsBlock__info-text{
+  color:#B3B3B3;
+  font-weight: 200;
+  font-size: 18px;
+  margin-bottom: 62px;
+}
+.IndividualsBlock__info-percentsBlock{
+  display: flex;
+  margin-bottom: 62px;
+}
+.percentsBlock__item-percents{
+  color:#CAFF33;
+  font-size: 58px;
+  font-weight: 500;
+}
+.percentsBlock__item-text{
+  color:#B3B3B3;
+  font-weight: 300;
+  font-size: 18px;
+}
+.percentsBlock__item2{
+  padding: 0 50px;
+  border-right:2px dashed #262626;
+  border-left:2px dashed #262626;
+}
+.percentsBlock__item1{
+  padding-right: 50px;
+}
+.percentsBlock__item3{
+  padding-left: 50px;
+}
+.IndividualsBlock__info-link{
+  display: inline-block;
+  background-color: #1C1C1C;
+  padding: 18px 24px;
+  border-radius: 82px;
+}
+.sectionCases__BusinessBlockMargin{
+  margin-top: 60px;
+}
