--- a/src/index.css
+++ b/src/index.css
@@ -374,3 +374,90 @@ a{
 .sectionCases__BusinessBlockMargin{
   margin-top: 60px;
 }
+.sectionFeatures{
+  padding-bottom: 150px;
+}
+.sectionFeatures__title{
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 14px;
+}
+.sectionFeatures__text{
+  font-size: 18px;
+  font-weight: 300;
+  color:#B3B3B3;
+  margin-bottom: 80px;
+}
+.sectionFeatures__blocks{
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+.blocks__tabs{
+  padding: 50px;
+  background-color: #1C1C1C;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: center;
+  max-height: 337px;
+}
+.blocks__tabs-btn{
+  padding: 18px 24px;
+  max-width: 208px;
+  background-color: transparent;
+  color:#fff;
+  border-radius: 100px;
+  border:1px solid #262626;
+  font-family: "Lexend", sans-serif;
+  text-align-last: left;
+  cursor:pointer;
+  transition:all .8s ease;
+}
+.blocks__tabs-btn--active{
+  color:#CAFF33;
+  background-color: #1A1A1A;
+}
+.blocks__info{
+  max-width: 1258px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap:30px;
+  opacity:0;
+  transition:all 0.8s linear;
+}
+.blocks__info--active{
+  animation: anim 1s ease forwards;
+}
+@keyframes anim {
+  0%{
+    opacity: 0;
+    transform:translateY(-20%);
+  }
+  100%{
+    opacity: 1;
+    transform:translateY(0);
+  }
+}
+.blocks__info-item{
+  padding: 50px;
+  background-color: #1C1C1C;
+  border-radius: 12px;
+  border:1px solid #262626;
+}
+.info__item-blockImg{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 31px;
+}
+.info__item-title{
+  font-size: 22px;
+  font-weight: 400;
+}
+.info__item-desc{
+  color:#B3B3B3;
+  font-size: 18px;
+  font-weight: 300;
+}
