--- a/src/index.css
+++ b/src/index.css
@@ -461,3 +461,79 @@ a{
   font-size: 18px;
   font-weight: 300;
 }
+.sectionQuestions{
+  padding-bottom: 211px;
+}
+.sectionQuestions__title{
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 14px;
+}
+.sectionQuestions__text{
+  font-size: 18px;
+  font-weight: 300;
+  color:#B3B3B3;
+  margin-bottom: 80px;
+}
+.sectionQuestions__blocks{
+  position: relative;
+  max-height: 760px;
+  overflow: hidden;
+}
+.sectionQuestions__blocks--active{
+  max-height: none;
+  margin-bottom: 20px;
+}
+.sectionQuestions__blocks-inner{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 30px;
+}
+.sectionQuestions__blocks-item{
+  padding: 50px;
+  border:1px solid #262626;
+  border-radius: 14px;
+}
+.blocks__item-title{
+  font-size: 20px;
+  font-weight: 500;
+  border-bottom:1px solid #262626;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+.blocks__item-desc{
+  display: inline-block;
+  min-width: 100%;
+  text-align: left;
+}
+.sectionQuestions__btn{
+  display: block;
+  padding: 18px 24px;
+  font-size: 18px;
+  font-weight: 400;
+  border-radius: 100px;
+  border:1px solid #262626;
+  background-color: #1C1C1C;
+  color:#fff;
+  max-width: 193px;
+  margin: 0 auto;
+  cursor:pointer;
+  opacity: 1;
+  transition:opacity 0.5s ease;
+}
+.sectionQuestions__btn:hover{
+  opacity: 0.7;
+}
+.sectionQuestion__blocks-gradientBlock{
+  opacity: 0;
+  transition:all .5s ease;
+}
+.sectionQuestion__blocks-gradientBlock--active{
+  height: 275px;
+  width: 100%;
+  background:linear-gradient(to bottom,rgba(25,25,25,0),rgba(25,25,25,1) );
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 1;
+}
