--- a/src/index.css
+++ b/src/index.css
@@ -774,3 +774,63 @@ a{
   padding-left: 12px;
   border-left:1px solid #B3B3B3;
 }
+.sectionExcellence{
+  padding-bottom: 150px;
+  opacity: 0;
+  transform:translateY(50%);
+  transition:all 1s ease;
+}
+.sectionExcellence--active{
+  opacity: 1;
+  transform:translateY(0);
+}
+.sectionExcellence__inner{
+  padding: 50px 50px 267px 50px;
+  background-color: #1C1C1C;
+  border-radius: 20px;
+  position: relative;
+}
+.sectionExcellence__inner::after{
+  content:'';
+  width: 505px;
+  height: 480px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-image: url('./../public/images/sectionExcellence/Abstract Design.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.sectionExcellence__secondInner{
+  position: relative;
+}
+.sectionExcellence__info{
+  padding: 50px;
+  background-color: #1A1A1A;
+  border-radius: 20px 0 80px 20px;
+  max-width: 791px;
+  position: relative;
+  z-index: 2;
+}
+.info__subtitle{
+  font-size: 20px;
+  font-weight: 400;
+}
+.info__title{
+  font-size: 58px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 23px;
+}
+.info__text{
+  color:#B3B3B3;
+  font-size: 18px;
+  font-weight: 300;
+}
+.sectionExcellence__img{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
+}
