--- a/src/index.css
+++ b/src/index.css
@@ -707,6 +707,8 @@ a{
   font-size: 40px;
   font-weight: 400;
   margin-bottom: 14px;
+  position: relative;
+  z-index: 2;
 }
 .sectionJourney__info-desc{
   font-size: 18px;
@@ -991,6 +993,9 @@ a{
   .sectionTop__moneyBlock::before{
     display: none;
   }
+  .sectionJourney__divLink .info__link{
+    text-wrap: nowrap;
+  }
 }
 @media (max-width:1440px){
   .sectionTop__inner{
@@ -1018,6 +1023,9 @@ a{
     transition:all 1s ease;
   }
   .sectionFeatures{
+    transition:all 1s ease;
+  }
+  .sectionTestimonials{
     transition:all 1s ease;
   }
   .sectionProducts__btnInfo{
@@ -1100,6 +1108,51 @@ a{
   .sectionQuestions__blocks--active{
     max-height: 1600px;
   }
+  .sectionProducts__info-title{
+    font-size: 38px;
+    margin-bottom: 10px;
+  }
+  .btnInfo__text1,
+  .btnInfo__text2{
+    padding: 10px 18px;
+    font-size: 16px;
+  }
+  .slider__gradientBlock2,
+  .slider__gradientBlock1{
+    width: 400px;
+  }
+  .swiperSlide__text{
+    margin-bottom: 40px;
+    font-size: 16px;
+  }
+  .sectionJourney__inner{
+    padding: 40px;
+  }
+  .sectionJourney__info-title{
+    font-size: 30px;
+  }
+  .footer{
+    padding: 60px 80px 30px;
+  }
+  .footer__topline-contacts{
+    font-size: 16px;
+  }
+  .footer__bottomline-text{
+    font-size: 15px;
+  }
+  .footer__bottomline-subBlock{
+    font-size: 15px;
+  }
+  .footer__bottomline{
+    padding: 12px 24px 12px 12px;
+  }
+  .footer__bottomline-img{
+    max-width: 44px;
+  }
+  .sectionJourney__inner::after{
+    width: 150px;
+    height: 140px;
+  }
 }
 @media (max-width:1050px){
   .sectionTop__moneyBlock{
@@ -1166,9 +1219,37 @@ a{
     margin-top: 0;
     padding-top: 15px;
   }
-  /* .sectionQuestion .blocks__item-desc{
-    text-align: left;
-  } */
+  .swiperSlide__topline{
+    margin-bottom: 20px;
+  }
+  .swiperSlide__text{
+    margin-bottom: 20px;
+    font-size: 15px;
+  }
+  .slider__gradientBlock2,
+  .slider__gradientBlock1{
+    width: 230px;
+  }
+  .slider__navigation-prev,
+  .slider__navigation-next{
+    padding: 8px;
+  }
+  .sectionProducts__text{
+    font-size: 16px;
+  }
+  .sectionJourney__divLink .info__link{
+    padding: 14px 20px;
+    font-size: 16px;
+  }
+  .sectionJourney__info-desc{
+    font-size: 16px;
+  }
+  .sectionJourney__info-title{
+    font-size: 24px;
+  }
+  .footer{
+    padding: 40px 60px 20px;
+  }
 }
 @media (max-width:855px){
   .sectionTop__inner{
@@ -1249,6 +1330,68 @@ a{
   .sectionQuestions__blocks-item{
     padding: 20px;
   }
+  .swiperSlide__inner{
+    padding: 0 5px;
+  }
+  .swiperSlide__text{
+    font-size: 13px;
+  }
+  .sectionProducts__info-title{
+    font-size: 32px;
+  }
+  .sectionProducts__text{
+    font-size: 14px;
+  }
+  .btnInfo__text1,
+  .btnInfo__text2{
+    font-size: 15px;
+  }
+  .slider__gradientBlock2,
+  .slider__gradientBlock1{
+    width: 170px;
+  }
+  .slider__navigation-next,
+  .slider__navigation-prev{
+    padding: 7px;
+  }
+  .sectionJourney__inner{
+    gap: 50px;
+    padding: 30px;
+  }
+  .sectionJourney__info-desc{
+    font-size: 15px;
+  }
+  .sectionJourney__info-title{
+    font-size: 20px;
+  }
+  .sectionJourney__divLink .info__link{
+    padding: 10px 16px;
+  }
+  .footer__bottomline{
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 12px;
+  }
+  .footer{
+    padding: 40px 30px 20px;
+  }
+  .footer__bottomline{
+    padding: 50px 24px 12px 12px;
+    position: relative;
+  }
+  .footer__bottomline-images{
+    position: absolute;
+    top:-20px;
+  }
+  .footer__topline-contacts{
+    padding: 30px;
+  }
+  .footer__topline{
+    gap:30px;
+  }
+  .footer__topline-contacts{
+    flex-wrap: wrap;
+  }
 } 
 @media (max-width:620px){
   .sectionTop__income{
@@ -1313,6 +1456,7 @@ a{
   .sectionProducts__btnInfo{
     align-self: center;
     margin-top: 20px;
+    border:1px solid #262626;
   }
   .sectionCases{
     padding-bottom: 75px;
@@ -1377,6 +1521,9 @@ a{
   .blocks__tabs{
     gap: 10px;
   }
+  .sectionQuestions{
+    padding-bottom: 100px;
+  }
   .sectionQuestions__title{
     font-size: 32px;
     text-align: center;
@@ -1396,6 +1543,67 @@ a{
   }
   .sectionQuestions__blocks--active{
     max-height: 2100px;
+  }
+  .sectionTestimonials{
+    padding-bottom: 75px;
+  }
+  .swiperSlide__subtext{
+    font-size: 16px;
+  }
+  .slider__navigation-next{
+    bottom: 30px;
+    right: 0;
+    border:1px solid #262626;
+  }
+  .slider__navigation-prev{
+    bottom: 30px;
+    left: 0;
+    border:1px solid #262626;
+  }
+  .swiperSlide__inner{
+    border:1px solid #262626;
+    padding: 20px;
+    border-radius: 12px;
+  }
+  .slider__navigation{
+    margin-top: 20px;
+  }
+  .slider__navigation{
+    max-width: 125px;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+  .slider__gradientBlock2,
+  .slider__gradientBlock1{
+    width: 20%;
+  }
+  .slider__gradientBlock2{
+    height: 240px;
+    bottom: 81px;
+    right: 0;
+  }
+  .slider__gradientBlock1{
+    height: 240px;
+    bottom: 81px;
+    left: 0;
+  }
+  .sectionJourney__inner{
+    flex-direction: column;
+    text-align: center;
+  }
+  .sectionJourney{
+    padding-bottom: 75px;
+  }
+  .contacts__email-img,
+  .contacts__tel-img,
+  .contacts__location-img{
+    max-width: 20px;
+  }
+  .footer{
+    padding: 40px 10px 20px;
+  }
+  .footer__topline-contacts{
+    padding: 30px 0;
   }
 }
 @media (max-width:450px){
@@ -1452,6 +1660,40 @@ a{
   }
   .sectionQuestions__btn{
     font-size: 14px;
+  }
+  .swiperSlide__inner{
+    padding: 10px;
+  }
+  .swiperSlide__text{
+    margin-bottom: 10px;
+  }
+  .slider__navigation{
+    margin-top: 30px;
+  }
+  .sectionTestimonials .sectionProducts__info{
+    margin-bottom: 40px;
+  }
+  .sectionJourney__inner{
+    padding: 20px;
+    gap: 20px;
+  }
+  .sectionJourney__info-desc{
+    font-size: 14px;
+  }
+  .footer__topline{
+    gap: 25px;
+  }
+  .footer__topline-contacts{
+    font-size: 14px;
+  }
+  .footer__bottomline-text{
+    font-size: 14px;
+  }
+  .footer__bottomline-subBlock{
+    font-size: 14px;
+  }
+  .footer__bottomline{
+    padding: 50px 12px 12px;
   }
 }
 @media (max-width:380px){
