--- a/src/index.css
+++ b/src/index.css
@@ -592,7 +592,6 @@ a{
 }
 .swiper {
   max-width: 100%;
-  height: 322px;
   position: relative;
   z-index: 1;
 }
@@ -602,7 +601,7 @@ a{
   background-color: #262626;
 }
 .swiperSlide__inner{
-  padding: 0 10px;
+  padding: 0 60px;
   text-align: center;
 }
 .swiperSlide__topline{
@@ -613,9 +612,9 @@ a{
   margin-bottom: 50px;
 }
 .swiperSlide__text{
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   text-align: center;
   max-width: 404px;
 }
@@ -658,26 +657,6 @@ a{
   border-radius: 100px;
   background-color: #1C1C1C;
   cursor:pointer;
-}
-.slider__gradientBlock1{
-  height: 340px;
-  width: 556px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background:linear-gradient(to left,rgba(25,25,25,0),rgba(25,25,25,1) );
-  background:-moz-linear-gradient(to right,rgba(25,25,25,0),rgba(25,25,25,1) );
-  z-index: 2;
-}
-.slider__gradientBlock2{
-  height: 340px;
-  width: 556px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  background:linear-gradient(to right,rgba(25,25,25,0),rgba(25,25,25,1) );
-  background:-moz-linear-gradient(to right,rgba(25,25,25,0),rgba(25,25,25,1) );
-  z-index: 2;
 }
 .sectionJourney{
   padding-bottom: 150px;
@@ -1124,10 +1103,6 @@ a{
     padding: 10px 18px;
     font-size: 16px;
   }
-  .slider__gradientBlock2,
-  .slider__gradientBlock1{
-    width: 400px;
-  }
   .swiperSlide__text{
     margin-bottom: 40px;
     font-size: 16px;
@@ -1306,11 +1281,10 @@ a{
   }
   .swiperSlide__text{
     margin-bottom: 20px;
-    font-size: 15px;
+    font-size: 14px;
   }
-  .slider__gradientBlock2,
-  .slider__gradientBlock1{
-    width: 230px;
+  .swiperSlide__inner{
+    padding: 0 50px;
   }
   .slider__navigation-prev,
   .slider__navigation-next{
@@ -1461,9 +1435,6 @@ a{
   .swiperSlide__inner{
     padding: 0 5px;
   }
-  .swiperSlide__text{
-    font-size: 13px;
-  }
   .sectionProducts__info-title{
     font-size: 32px;
   }
@@ -1474,14 +1445,15 @@ a{
   .btnInfo__text2{
     font-size: 15px;
   }
-  .slider__gradientBlock2,
-  .slider__gradientBlock1{
-    width: 170px;
-  }
   .slider__navigation-next,
   .slider__navigation-prev{
     padding: 7px;
   }
+  .slider__navigation-next,
+  .slider__navigation-prev{
+    bottom: 70px;
+  }
+
   .sectionJourney__inner{
     gap: 50px;
     padding: 30px;
@@ -1724,26 +1696,9 @@ a{
     border-radius: 12px;
   }
   .slider__navigation{
-    margin-top: 20px;
-  }
-  .slider__navigation{
     max-width: 125px;
     margin: 0 auto;
-    margin-top: 20px;
-  }
-  .slider__gradientBlock2,
-  .slider__gradientBlock1{
-    width: 20%;
-  }
-  .slider__gradientBlock2{
-    height: 240px;
-    bottom: 81px;
-    right: 0;
-  }
-  .slider__gradientBlock1{
-    height: 240px;
-    bottom: 81px;
-    left: 0;
+    margin-top: 100px;
   }
   .sectionJourney__inner{
     flex-direction: column;
@@ -1867,9 +1822,6 @@ a{
   }
   .swiperSlide__text{
     margin-bottom: 10px;
-  }
-  .slider__navigation{
-    margin-top: 30px;
   }
   .sectionTestimonials .sectionProducts__info{
     margin-bottom: 40px;
